# ikea-symfonisk-gateway

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  ARCHITECTURE.md  Dockerfile  README.md  RELEASE.md  SKILLS.md  config.db  docker-compose.yml  pyproject.toml  reproduce_issue.py  reproduce_issue_2.py
.github/workflows/: ci.yml  gitleaks.yml
adapters/linux_audio/: pyproject.toml
adapters/linux_audio/src/adapter_linux_audio/: __init__.py
adapters/linux_audio/tests/: test_linux_audio.py
adapters/linux_bluetooth/: pyproject.toml
adapters/linux_bluetooth/src/adapter_linux_bluetooth/: __init__.py  agent.py  dbus_adapter.py  store.py  window.py
adapters/linux_bluetooth/tests/: test_adapter.py  test_bluetooth.py  test_components.py
adapters/synthetic/: pyproject.toml
adapters/synthetic/src/adapter_synthetic/: __init__.py
adapters/synthetic/tests/: test_adapter.py
adapters/windows_audio/: pyproject.toml
adapters/windows_audio/src/adapter_windows_audio/: __init__.py
adapters/windows_audio/src/adapter_windows_audio/backends/: __init__.py  base.py  models.py  null_backend.py  pyaudiowpatch_backend.py
adapters/windows_audio/tests/: test_windows_audio.py  test_windows_diagnostics.py
benchmarks/: baseline_0.1.0.json
bridge_core/: pyproject.toml
bridge_core/src/bridge_core/: __init__.py  main.py
bridge_core/src/bridge_core/adapters/: base.py  mock_renderer.py
bridge_core/src/bridge_core/api/: __init__.py  adapters.py  bluetooth.py  config.py  discovery.py  events.py  health.py  models.py  play.py  sessions.py  sources.py  targets.py
bridge_core/src/bridge_core/core/: __init__.py  auto_play.py  config_store.py  errors.py  event_bus.py  pipeline.py  session_manager.py  source_registry.py  target_registry.py
bridge_core/src/bridge_core/stream/: __init__.py  pipeline.py  profiles.py  publisher.py  utils.py
bridge_core/tests/: test_api.py  test_api_play.py  test_audio_pipeline.py  test_auto_play.py  test_bluetooth_api.py  test_config_store.py  test_event_bus.py  test_ffmpeg_resolution.py  test_incumbent_resolution.py  test_jitter_buffer_robustness.py  test_main.py  test_pipeline_publisher.py  test_platform_validation.py  test_profile_negotiation.py  test_session_manager.py  test_session_takeover.py  test_source_registry.py  test_startup_diagnostics.py  test_stream_publisher.py  test_supervision_verified.py  test_target_arbitration.py
bridge_core/tests/core/: test_session_manager.py  test_source_registry.py
docs/: WIFI_RESILIENCE.md
ingress_sdk/: pyproject.toml
ingress_sdk/src/ingress_sdk/: __init__.py  base.py  client.py  protocol.py  types.py
ingress_sdk/tests/: test_protocol.py
integration_homeassistant/: pyproject.toml
integration_homeassistant/src/integration_homeassistant/: __init__.py  button.py  config_flow.py  const.py  coordinator.py  manifest.json  media_player.py  select.py  sensor.py  services.yaml  strings.json
integration_homeassistant/src/integration_homeassistant/www/: panel.js
renderer_sonos/: pyproject.toml
renderer_sonos/src/renderer_sonos/: __init__.py  discovery.py  heal.py  playback.py  topology.py
renderer_sonos/tests/: test_adapter.py  test_discovery.py  test_heal.py  test_playback.py  test_topology.py
scripts/: benchmark_performance.py  check_circular_imports.py  check_package_boundaries.py  export-project.sh  install-hooks.sh  secrets-scan.sh  verify_linux_audio.py  verify_source_discovery.py  verify_synthetic_adapter.py  verify_system_health.py  verify_windows_loopback.py
scripts/wifi-resilience/: wifi-watchdog.service  wifi-watchdog.sh  wifi-watchdog.timer
shared/: pyproject.toml
shared/src/shared/: __init__.py  metrics.py  normalization.py  subprocess.py
shared/tests/: test_normalization.py  test_subprocess.py
skills/wave-organizer/: ISSUE_TEMPLATE.md  SKILL.md
ui_web/: AGENTS.md  pyproject.toml
ui_web/src/ui_web/: __init__.py  index.html
ui_web/src/ui_web/static/: index.html
