[project]
name = "integration-homeassistant"
version = "0.1.0"
description = "Home Assistant custom integration for the IKEA SYMFONISK bridge"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.15.0",
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/integration_homeassistant"]
