[project]
name = "ui-web"
version = "0.1.0"
description = "Web UI for the IKEA SYMFONISK bridge"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ui_web"]
