[project]
name = "adapter-linux-bluetooth"
version = "0.1.0"
description = "Linux Bluetooth (BlueALSA) ingress adapter"
requires-python = ">=3.12"
dependencies = [
    "dbus-fast>=4.0.0",
    "ingress-sdk",
    "dbus-next",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.15.0",
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adapter_linux_bluetooth"]
