[project]
name = "adapter-synthetic"
version = "0.1.0"
description = "Synthetic test source adapter for the IKEA SYMFONISK bridge"
requires-python = ">=3.12"
dependencies = [
    "ingress-sdk",
    "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.15.0",
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adapter_synthetic"]
